<resources>
    <string name="app_name">Bloomi</string>
    <string name="tab_text_1">Dashboard</string>
    <string name="tab_text_2">Garden</string>
    <string name="cactus">Cactus…</string>
    <string name="pokey">Pokey…</string>
    <string name="add_to_garden">Add to Garden</string>
    <string name="april">April…</string>
    <string name="plant_type">Plant Type:</string>
    <string name="plant_nickname">Plant Nickname:</string>
    <string name="watering_notifications">Watering Notifications?</string>
    <string name="height_hint">5.4</string>
    <string name="current_height">Current Height:</string>
    <string name="other_notes">Other Notes:</string>
    <string name="notes_hint">- Place in sunlight \n- Remember to love</string>
    <string name="add_a_plant">Add a Plant</string>
    <string name="pick_time">Pick a Time</string>
    <string name="nameEmpty">!</string>
    <string name="pick_date">pick a date</string>
    <string name="dd_mm_yy">dd / mm / yyyy</string>
    <string name="hh_mm">hh : mm</string>
    <array name="metrics">
        <item>feet</item>
        <item>meters</item>
        <item>inches</item>
        <item>cm</item>
        <item>mm</item>
    </array>
    <array name="frequency">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Every two weeks</item>
    </array>

    <string name="edit">Edit</string>
    <string name="x">X</string>
    <string name="watering_notifs">Watering Notifications:</string>
    <string name="at">at</string>
    <string name="next_up">Next Up:</string>
    <string name="growth">Growth:</string>
    <string name="add_measurement">Add a measurement</string>
    <string name="last_measurement">Last Measurement:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="title_activity_sign_up">SignUp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>