<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".EditPlant">

    <!--    BIG CARD-->
    <androidx.cardview.widget.CardView
        android:id="@+id/gardenCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="15dp">

            <EditText
                android:id="@+id/edtEditName"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="Plant Nickname (plant type if none)"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageWrapper" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageWrapper"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:padding="0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDone">

                <ImageView
                    android:id="@+id/plantImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnDone"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="69dp"
                android:layout_height="35dp"
                android:layout_marginTop="2dp"
                android:text="Done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.984"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnEditCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="44dp"
                android:layout_height="48dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/x"
                android:textSize="20sp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnDone"
                app:layout_constraintVertical_bias="0.384" />

            <EditText
                android:id="@+id/edtEditType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Plant Type"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEditName" />

            <TextView
                android:id="@+id/plantWatering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/watering_notifs"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEditType" />

            <Spinner
                android:id="@+id/editFrequency"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:entries="@array/frequency"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/editAt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plantWatering" />

            <TextView
                android:id="@+id/editAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/plantTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editFrequency"
                app:layout_constraintTop_toTopOf="@+id/editFrequency" />

            <TextView
                android:id="@+id/plantTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="12 : 00 pm"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editAt"
                app:layout_constraintTop_toTopOf="@+id/editAt" />

            <TextView
                android:id="@+id/plantOtherNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/other_notes"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/plantWatering"
                app:layout_constraintTop_toBottomOf="@+id/editFrequency" />

            <EditText
                android:id="@+id/edtEditNotes"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:inputType="textImeMultiLine"
                android:lineSpacingExtra="5sp"
                android:text="- Place in sunlight \n- Keep away from cats \n- Brag about to friends"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plantOtherNotes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>